# Womens-HealthBench

./: .env.example  .gitignore  LICENSE  MODEL_CARD.md  Makefile  README.md  docker-compose.yml
apps/mobile/: .gitignore  README.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  consent.tsx  enroll.tsx  health-data.tsx  index.tsx  lock.tsx
apps/mobile/app/(tabs)/: _layout.tsx  check-in.tsx  cycle.tsx  index.tsx  privacy.tsx
apps/mobile/modules/expo-health-data/: app.plugin.js  expo-module.config.json  package.json
apps/mobile/src/: theme.ts  types.ts  validation.ts
apps/mobile/src/components/: Button.tsx  HistoryStrip.tsx  Notice.tsx  RatingScale.tsx  Screen.tsx
apps/mobile/src/providers/: AppProvider.tsx
apps/mobile/src/screens/: check-in-cycle.test.tsx  cycle.test.tsx  enroll.test.tsx  health-data.test.tsx
apps/mobile/src/services/: api.ts  deviceAuth.ts  deviceAuth.web.ts  healthData.test.ts  healthData.ts  healthData.web.ts  phaseForecast.test.ts  storage.test.ts  storage.ts  storage.web.test.ts  (+3 more)
benchmark/: pyproject.toml
benchmark/benchmark/: BENCHMARK_METHODOLOGY.md
benchmark/healthbench_benchmark/: __init__.py  cli.py  evaluation.py  features.py  io.py  synthetic.py
benchmark/mcphases_phase_v01/: build_benchmark.py
benchmark/mcphases_phase_v01/results/: BENCHMARK_TASK_V0.1.md  README.md  baseline_metrics.json  benchmark_manifest.json  feature_dictionary.csv  run_metadata.json
benchmark/tests/: test_features.py  test_public_schema.py  test_restricted_source.py  test_splits.py
docs/: benchmark.md  deployment.md  health-data.md  privacy.md  schema.md
mcphases_app_common_v02_results/: BENCHMARK_TASK_APP_COMMON_V0.2.md  README.md  app_feature_contract.json  baseline_metrics.json  benchmark_manifest.json  feature_dictionary.csv  run_metadata.json
schemas/: research-checkin.schema.json  research-wearable-interval.schema.json  synthetic-example-records.json
services/api/: pyproject.toml
services/api/app/: __init__.py  auth.py  config.py  cycle.py  database.py  export_research.py  forecasting.py  main.py  migrate_cycle_tracking.py  migrate_mandatory_research.py  migrate_wearables.py  models.py  phase_forecasting.py  research.py  schemas.py  seed.py
services/api/tests/: conftest.py  test_admin_tools.py  test_api.py  test_cycle_tracking.py  test_phase_forecasting.py  test_wearable_intervals.py
uriel_handoff/docs/: mcphases-phase-benchmark.md
(+8 files in other folders)
