[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthbench-benchmark"
version = "0.1.0"
description = "Reproducible, leakage-resistant symptom forecasting benchmark"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<4",
  "scikit-learn>=1.5,<2",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.25,<5",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
healthbench-benchmark = "healthbench_benchmark.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["healthbench_benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
