[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthbench-api"
version = "0.1.0"
description = "Private symptom forecasting API"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.116,<1",
  "joblib>=1.4,<2",
  "pandas==2.2.2; python_version < '3.13'",
  "pandas==2.2.3; python_version >= '3.13'",
  "pydantic-settings>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "scikit-learn==1.6.1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
